syntax = "proto3";

package soma.rpc;

message ProtocolConfig {
  optional uint64 protocol_version = 1;
  map<string, bool> feature_flags = 2;
  map<string, string> attributes = 3;
}